[package]
name = "swcurve-rcb15"
description = "Implement group law for SW curves in RCB15 paper"
version = "0.1.0"
authors = [ "Zhenfei Zhang <zhenfei.zhang@hotmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-bn254 = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-bls12-381 = "0.3.0"

halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves" }